# cmake-canonical-cxx-project

./: CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/git_commit/doc/: README.md
apps/git_commit/src/: CMakeLists.txt  main.cpp
apps/hello/doc/: README.md
apps/hello/src/: CMakeLists.txt
doc/: README.md
libs/: CMakeLists.txt
libs/global/doc/: README.md
libs/global/include/romz/global/: global.h
libs/global/src/: CMakeLists.txt  global.cpp
libs/global/tests/: CMakeLists.txt  global.cpp
libs/math/doc/: README.md
libs/math/include/romz/math/: add.h  mul.h
libs/math/src/: CMakeLists.txt  add.cpp  mul.cpp
libs/math/tests/: CMakeLists.txt  add.cpp  mul.cpp
libs/random/doc/: README.md
libs/random/include/romz/random/: get_random_bytes.h
libs/random/src/: CMakeLists.txt  get_random_bytes.cpp
libs/random/tests/: CMakeLists.txt  get_random_bytes.cpp
